help from https://christianheilmann.com/2022/01/13/turning-a-github-page-into-a-progressive-web-app/

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lab 8 - Network & ServiceWorkers</title>
 
-  <link rel="manifest" href="manifest.json" />
+  <link rel="canonical" href="https://symsoph.github.io/Lab8-Starter/" />
+
+  <link rel="manifest" href="/Lab8-Starter/manifest.json" />
 
   <!-- Turkey Favicon -->
   <link rel="icon"
